--- a/SkillBAR/Galleria.html
+++ b/SkillBAR/Galleria.html
@@ -24,7 +24,7 @@
 						<li><a class="active" href="galleria.html">Galleria</a></li>
 						<li><a href="yhteystiedot.html">Yhteystiedot</a></li>
 						<div id="FinEng" >
-						<li><a href="SkillBarIndexEn.html"></a></li>
+						<li><a href="eng/GalleriaEn.html"></a></li>
 						</div>
 					</ul> 
                 </div>
