--- a/SkillBAR/Saannot.html
+++ b/SkillBAR/Saannot.html
@@ -23,7 +23,7 @@
 						<li><a href="galleria.html">Galleria</a></li>
 						<li><a href="yhteystiedot.html">Yhteystiedot</a></li>
 						<div id="FinEng" >
-						<li><a href="SkillBarIndexEn.html"></a></li>
+						<li><a href="eng/saannotEn.html"></a></li>
 						</div>
 					</ul> 
             </div>    
