--- a/SkillBAR/Yhteystiedot.html
+++ b/SkillBAR/Yhteystiedot.html
@@ -24,7 +24,7 @@
   				<li><a href="galleria.html">Galleria</a></li>
   				<li><a class="active" href="yhteystiedot.html">Yhteystiedot</a></li>
 				<div id="FinEng" >
-				<li><a href="eng/yhteystiedotEnhtml"></a></li>
+				<li><a href="eng/yhteystiedotEn.html"></a></li>
 				</div>
 			</ul> 
                 </div>
