Lisätty kuva "mountains.jpg"

--- a/SkillBAR/Galleria.html
+++ b/SkillBAR/Galleria.html
@@ -20,9 +20,9 @@
             	<div class="Navi">
                 	<ul>
 						<li><a href="SkillBarIndex.html">Yleistä</a></li>
-						<li><a href="saannot.html">Säännöt</a></li>
-						<li><a class="active" href="galleria.html">Galleria</a></li>
-						<li><a href="yhteystiedot.html">Yhteystiedot</a></li>
+						<li><a href="Saannot.html">Säännöt</a></li>
+						<li><a class="active" href="Galleria.html">Galleria</a></li>
+						<li><a href="Yhteystiedot.html">Yhteystiedot</a></li>
 						<div id="FinEng" >
 						<li><a href="eng/GalleriaEn.html"></a></li>
 						</div>
@@ -62,7 +62,7 @@ div.desc {
 <body>
 
 <div class="gallery">
-  <a target="_blank" href="image/Arttu_wiskari.jpg">
+  <a target="_blank" href="image/Arttu_Wiskari.jpg">
     <img src="image/Arttu_wiskari.jpg" alt="Cinque Terre" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
