--- a/SkillBAR/SkillBarIndex.html
+++ b/SkillBAR/SkillBarIndex.html
@@ -20,9 +20,9 @@
             	<div class="Navi">
 					<ul>
 						<li><a class="active" href="SkillBarIndex.html">Yleistä</a></li>
-						<li><a href="saannot.html">Säännöt</a></li>
-						<li><a href="galleria.html">Galleria</a></li>
-						<li><a href="yhteystiedot.html">Yhteystiedot</a></li>
+						<li><a href="Saannot.html">Säännöt</a></li>
+						<li><a href="Galleria.html">Galleria</a></li>
+						<li><a href="Yhteystiedot.html">Yhteystiedot</a></li>
 						<div id="FinEng" >
 						<li><a href="eng/SkillBarIndexEn.html"></a></li>
 						</div>
