--- a/SkillBAR/eng/SaannotEn.html
+++ b/SkillBAR/eng/SaannotEn.html
@@ -37,6 +37,14 @@
 			<br>Please don't adjust the computers settings.</br>
 			<br>Please don't download anything without permission.</br>
 			<br>Breaking these rules may lead to a ban.</br>
+			<br>
+		
+			<h1>How To SkillBar</h1>
+			<br>
+			<iframe width="640" height="480" src="https://www.youtube.com/embed/Nq0bcoT4TpA" 
+			frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+			allowfullscreen>
+			</iframe>
             </div>
             
            
